log
Thu 20 Apr 2023 02:57:36 AM UTC: 
 tests:  1|8
total_score: 0/70
5030089
Thu 20 Apr 2023 04:40:15 PM UTC: 
 treemap.c | 42 ++++++++++++++++++++++++++----------------
 1 file changed, 26 insertions(+), 16 deletions(-)
 tests:  1|8
total_score: 0/70
7bf13bc
Thu 20 Apr 2023 04:49:44 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
28216f3
Thu 20 Apr 2023 04:51:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ea5a8c2
Thu 20 Apr 2023 04:51:55 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
717e8ce
Thu 20 Apr 2023 05:01:24 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:3: error: expected ‘)’ before ‘{’ token
   82 |   {
      |   ^
treemap.c:81:5: note: to match this ‘(’
   81 |   if(tree == NULL
      |     ^
treemap.c:85:1: error: expected expression before ‘}’ token
   85 | }
      | ^
treemap.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b4ff267
Thu 20 Apr 2023 05:01:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:14: error: ‘NUL’ undeclared (first use in this function); did you mean ‘NULL’?
   81 |   if(tree == NUL)
      |              ^~~
      |              NULL
treemap.c:81:14: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f10273f
Thu 20 Apr 2023 05:01:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8493157
